:bug: Fixes non-delete endpoints returning 204
